Fixes for horizontal timeline styles, adding full bleed support for horizontal and vertical timelines

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -15,6 +15,8 @@ body {
   font-size: $font-size-m;
   line-height: $line-height-l;
   color: $body-color;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 p {
@@ -29,7 +31,6 @@ a {
 main {
   margin: 0 $margin-main;
   max-width: ($breakpoint-s - 1rem);
-
   @media screen and (min-width: $breakpoint-s) {
     margin: 0 auto;
   }
