--- a/styles/components/Timeline.scss
+++ b/styles/components/Timeline.scss
@@ -14,6 +14,16 @@ $timelineDotSize: 0.375rem;
   }
 }
 
+.wcp-vertical-timeline {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  width: 100vw;
+}
+
+.wcp-timeline-item__text-content {
+  padding-right: 1rem;
+}
+
 .wcp-timeline-item__line-and-dot {
   display: flex;
   flex-direction: column;
@@ -66,7 +76,6 @@ $timelineDotSize: 0.375rem;
   margin-bottom: 0;
   margin-top: $gutter-xs;
   position: relative;
-
   span {
     font-size: $font-size-s;
     color: $color-gray-medium;
@@ -92,13 +101,16 @@ $timelineDotSize: 0.375rem;
 }
 
 .wcp-horizontal-timeline {
-  padding-left: 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
   width: 100%;
   overflow-x: scroll;
   overflow-y: hidden;
   display: flex;
   flex-direction: row;
   @include hide-scrollbar();
+  width: 100vw;
+  margin-left: -1rem;
 }
 
 .wcp-horizontal-timeline .wcp-timeline-item__label {
@@ -126,4 +138,21 @@ $timelineDotSize: 0.375rem;
   margin-left: 0.1rem;
   margin-top: 1px;
   height: 1px;
+}
+
+.wcp-horizontal-timeline .wcp-tiny-card, .wcp-horizontal-timeline .wcp-tiny-card-wrapper {
+  &:not(:first-child) {
+    margin-top: $gutter-s;
+  }
+}
+
+.wcp-horizontal-timeline .wcp-tiny-card {
+  height: 3.5rem;
+  width: 70vw;
+  min-width: 70vw;
+}
+
+.wcp-horizontal-timeline .wcp-tiny-card__content {
+  display: flex;
+  flex-direction: column-reverse;
 }
